2008-08-18  Bart Veer  <bartv@ecoscentric.com>

	* acinclude.m4: major update of host-side configury
	* config.guess, config.sub, install-sh, ltmain.sh, missing,
	mkinstalldirs: import latest version
	* depcomp: add new support file required by automake

2003-02-12  Bart Veer  <bartv@ecoscentric.com>

	* acinclude.m4: Another attempt at the Tcl macro, to cope with
	cygwin tcl 8.3 and 8.4. Also fix some problems with VC++ builds.

2002-10-27  Bart Veer  <bartv@ecoscentric.com>

	* acinclude.m4 (ECOS_PATH_TCL): fix typo that prevented a build
	under Debian Woody

2002-09-22  Bart Veer  <bartv@ecoscentric.com>

	* acinclude.m4:
	Add the Tcl library path to ecos_LDADD (patch provided by Andrew
	Lunn). Also add a reminder about ecos_tcl_version issues and
	fix up Tk support.

2002-08-27  Robin Farine  <robin.farine@acn-group.ch>

	* acinclude.m4 (ECOS_PATH_TCL): having found tclConfig.sh in
	/<lib>/tcl<ver>, search for tkConfig.sh in /<lib>/tcl<ver> and in
	/<lib>/tk<ver>.

2002-08-03  Bart Veer  <bartv@ecoscentric.com>

	* Created as part of autoconf reorganization.

//####COPYRIGHTBEGIN####
//                                                                          
// ----------------------------------------------------------------------------
// Copyright (C) 2002, 2003 Bart Veer
//
// This file is part of the eCos autoconf support.
//
// This program is free software; you can redistribute it and/or modify it 
// under the terms of the GNU General Public License as published by the Free 
// Software Foundation; either version 2 of the License, or (at your option) 
// any later version.
// 
// This program is distributed in the hope that it will be useful, but WITHOUT 
// ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for 
// more details.
// 
// You should have received a copy of the GNU General Public License along with