@@ -1,3 +1,7 @@
+2008-08-20  Bart Veer  <bartv@ecoscentric.com>
+
+	* host/configure: regenerate after update of Tcl macro
+
 2008-08-18  Bart Veer  <bartv@ecoscentric.com>
 
 	* host/Makefile.am, host/configure.in, ecosynth.c: update
